--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,30 +13,35 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
-   <nav>
-    <div class="left">
-        <h1>TODO ASSIGNMENT</h1><hr>
-        <span><i class="fa-solid fa-earth-asia"></i>&nbsp;&nbsp;PUBLIC</span><hr>
-        <span><i class="fa-regular fa-clipboard"></i>&nbsp;&nbsp;BOARD</span>
-        <span><i class="fa-solid fa-chevron-down"></i></span>
-    </div>
-    <div class="right">
-        <hr><span><i class="fa-solid fa-filter"></i>&nbsp;&nbsp;FILTER</span>
-        <hr><img src="img/Screenshot_2023-03-16-22-38-23-71_99c04817c0de5652397fc8b56c3b3817-modified.png" alt="login-img">
-        <hr><span><i class="fa-solid fa-ellipsis"></i></span>
-    </div>
-   </nav>
-      
+    <nav>
+        <div class="left">
+            <h1>TODO ASSIGNMENT</h1>
+            <hr>
+            <span><i class="fa-solid fa-earth-asia"></i>&nbsp;&nbsp;PUBLIC</span>
+            <hr>
+            <span><i class="fa-regular fa-clipboard"></i>&nbsp;&nbsp;BOARD</span>
+            <span><i class="fa-solid fa-chevron-down"></i></span>
+        </div>
+        <div class="right">
+            <hr><span><i class="fa-solid fa-filter"></i>&nbsp;&nbsp;FILTER</span>
+            <hr><img src="img/Screenshot_2023-03-16-22-38-23-71_99c04817c0de5652397fc8b56c3b3817-modified.png"
+                alt="login-img">
+            <hr><span><i class="fa-solid fa-ellipsis"></i></span>
+        </div>
+    </nav>
+
     <div class="container-fluid">
         <div class="todo-box">
             <div style="text-align: start; font-weight:bolder ; margin: 10px;">To DO</div>
             <div id="dropzone1" class="container list dropzone">
-                <div class="item" draggable="true">Setup Redux Toolkit</div>
-                <div class="item" draggable="true">Implement Landing Page</div>
+                <div class="item" draggable="true">Setup Redux Toolkit<i class=" fa-solid fa-pen-to-square edit"></i></div>
+                <div class="item" draggable="true">Implement Landing Page <i class=" fa-solid fa-pen-to-square edit"></i>
+                </div>
             </div>
             <textarea class="todo-item" placeholder="Enter a title for this card"></textarea>
             <form class="todo-form">
@@ -46,7 +52,7 @@
         <div class="doing-box">
             <div style="text-align: start; font-weight:bolder ; margin: 10px;">Doing</div>
             <div id="dropzone2" class="container list tasks dropzone">
-                <div class="item" draggable="true">Setup Material UI</div>
+                <div class="item" draggable="true">Setup Material UI <i class=" fa-solid fa-pen-to-square edit"></i></div>
             </div>
             <textarea class="todo-item" placeholder="Enter a title for this card"></textarea>
             <form class="todo-form">
@@ -57,8 +63,9 @@
         <div class="done-box">
             <div style="text-align: start; font-weight:bolder ; margin: 10px;">Done</div>
             <div id="dragzone" class="container list tasks dragzone">
-                <div class="item" draggable="true">Initialize React Project</div>
-                <div class="item" draggable="true">New Task Updated</div>
+                <div class="item" draggable="true">Initialize React Project <i class=" fa-solid fa-pen-to-square edit"></i>
+                </div>
+                <div class="item" draggable="true">New Task Updated <i class=" fa-solid fa-pen-to-square edit"></i></div>
             </div>
             <textarea class="todo-item" placeholder="Enter a title for this card"></textarea>
             <form class="todo-form">
@@ -68,6 +75,7 @@
         </div>
     </div>
     <script src="script.js"></script>
-    
+
 </body>
+
 </html>
